WIP
Missing: immutable collections for the records, as described in "data oriented programming in java" here: https://github.com/chriskiehl/Data-Oriented-Programming-In-Java-Book/blob/37bfd1f513ee719176c596999fc50c119246cebc/app/src/test/java/dop/chapter02/Listings.java#L1061