@@ -6,6 +6,7 @@ import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import edu.kit.datamanager.pit.domain.PidRecordEntry;
 import jakarta.servlet.ServletContext;
 
 import com.fasterxml.jackson.databind.JsonNode;
@@ -53,8 +54,8 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.List;
-import java.util.Optional;
+import java.util.*;
+import java.util.stream.Collectors;
 
 
 // Might be needed for WebApp testing according to https://www.baeldung.com/integration-testing-in-spring
@@ -212,7 +213,7 @@ class RestWithInMemoryTest {
     void testCreateValidRecord() throws Exception {
         // test create
         PIDRecord createdRecord = ApiMockUtils.registerSomeRecord(this.mockMvc);
-        String createdPid = createdRecord.getPid();
+        String createdPid = createdRecord.pid();
 
         // We store created PIDs
         assertEquals(1, this.knownPidsDao.count());
@@ -223,18 +224,31 @@ class RestWithInMemoryTest {
 
         // Resolving the PID will override the available entry.
         assertEquals(1, this.knownPidsDao.count());
-        KnownPid kp = this.knownPidsDao.findByPid(resolvedRecord.getPid()).get();
+        KnownPid kp = this.knownPidsDao.findByPid(resolvedRecord.pid()).orElseThrow();
         // After resolving, the PID is not modified. So the creation and modification timestamps are still the same.
         assertEquals(kp.getCreated(), kp.getModified());
         // on update only
-        kp.getCreated().isBefore(kp.getModified());
+        assertTrue(kp.getCreated().isBefore(kp.getModified()));
     }
 
     @Test
     void testUpdateRecord() throws Exception {
         PIDRecord original = ApiMockUtils.registerSomeRecord(this.mockMvc);
-        PIDRecord modified = ApiMockUtils.clone(original);
-        modified.getEntries().get("21.T11148/b8457812905b83046284").get(0).setValue("https://example.com/anotherUrlAsBefore");
+        Map<String, List<PidRecordEntry>> entries = new HashMap<>(original.entries()).entrySet()
+                .stream()
+                .peek(entry -> {
+                    if (Objects.equals(entry.getKey(), "21.T11148/b8457812905b83046284")) {
+                        entry.getValue().addFirst(
+                                entry.getValue()
+                                        .getFirst()
+                                        .withValue("https://example.com/anotherUrlAsBefore")
+                        );
+                        entry.getValue().remove(1);
+                    }
+                })
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue));
+        PIDRecord modified = new PIDRecord(original.pid(), entries);
+        assertNotEquals(original, modified);
         PIDRecord updatedRecord = ApiMockUtils.updateRecord(this.mockMvc, original, modified);
         assertEquals(modified, updatedRecord);
     }
@@ -243,7 +257,7 @@ class RestWithInMemoryTest {
     void testIdPidRegisteredFails() throws Exception {
         // Nothing is registered, our local storags contains no PIDs
         PIDRecord nonRegistered = mapper.readValue(RECORD, PIDRecord.class);
-        boolean isRegistered = isPidRegistered(nonRegistered.getPid());
+        boolean isRegistered = isPidRegistered(nonRegistered.pid());
         assertFalse(isRegistered);
         assertEquals(0, this.knownPidsDao.count());
     }
@@ -256,7 +270,7 @@ class RestWithInMemoryTest {
         // If we clear the locally stored PIDs and then ask if it is registered, it should appear again.
         this.knownPidsDao.deleteAll();
         assertEquals(0, this.knownPidsDao.count());
-        boolean isRegistered = isPidRegistered(existing.getPid());
+        boolean isRegistered = isPidRegistered(existing.pid());
         assertTrue(isRegistered);
         assertEquals(1, this.knownPidsDao.count());
     }
@@ -287,7 +301,7 @@ class RestWithInMemoryTest {
         // we know it is in the local database:
         assertEquals(1, this.knownPidsDao.count());
         // so we should be able to retrieve it via the REST api:
-        this.mockMvc.perform(get("/api/v1/pit/known-pid/" + r.getPid()))
+        this.mockMvc.perform(get("/api/v1/pit/known-pid/" + r.pid()))
             .andDo(MockMvcResultHandlers.print())
             .andExpect(MockMvcResultMatchers.status().is2xxSuccessful());
     }
@@ -320,37 +334,37 @@ class RestWithInMemoryTest {
         PIDRecord r = ApiMockUtils.registerSomeRecord(this.mockMvc);
         PIDRecord r2 = ApiMockUtils.registerSomeRecord(this.mockMvc);
         assertEquals(2, this.knownPidsDao.count());
-        assertNotEquals(r.getPid(), r2.getPid());
+        assertNotEquals(r.pid(), r2.pid());
         
         List<KnownPid> pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.empty());
         
         assertEquals(2, pidinfos.size());
-        assertEquals(r.getPid(), pidinfos.get(0).getPid());
-        assertEquals(r2.getPid(), pidinfos.get(1).getPid());
+        assertEquals(r.pid(), pidinfos.get(0).getPid());
+        assertEquals(r2.pid(), pidinfos.get(1).getPid());
         
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, null, TOMORROW, null, null, Optional.empty());
         
         assertEquals(2, pidinfos.size());
-        assertEquals(r.getPid(), pidinfos.get(0).getPid());
-        assertEquals(r2.getPid(), pidinfos.get(1).getPid());
+        assertEquals(r.pid(), pidinfos.get(0).getPid());
+        assertEquals(r2.pid(), pidinfos.get(1).getPid());
 
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, null, null, null, Optional.empty());
         
         assertEquals(2, pidinfos.size());
-        assertEquals(r.getPid(), pidinfos.get(0).getPid());
-        assertEquals(r2.getPid(), pidinfos.get(1).getPid());
+        assertEquals(r.pid(), pidinfos.get(0).getPid());
+        assertEquals(r2.pid(), pidinfos.get(1).getPid());
 
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, null, null, null, TOMORROW, Optional.empty());
         
         assertEquals(2, pidinfos.size());
-        assertEquals(r.getPid(), pidinfos.get(0).getPid());
-        assertEquals(r2.getPid(), pidinfos.get(1).getPid());
+        assertEquals(r.pid(), pidinfos.get(0).getPid());
+        assertEquals(r2.pid(), pidinfos.get(1).getPid());
 
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, null, null, YESTERDAY, null, Optional.empty());
         
         assertEquals(2, pidinfos.size());
-        assertEquals(r.getPid(), pidinfos.get(0).getPid());
-        assertEquals(r2.getPid(), pidinfos.get(1).getPid());
+        assertEquals(r.pid(), pidinfos.get(0).getPid());
+        assertEquals(r2.pid(), pidinfos.get(1).getPid());
 
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, null, NOW.minusSeconds(60), null, null, Optional.empty());
         assertEquals(0, pidinfos.size());
@@ -362,33 +376,33 @@ class RestWithInMemoryTest {
         
         // do some simple assertions for a little more delay between the creation times of the records.
         // unfortunately we do not seem to be able to wait() within tests.
-        assertEquals(r1.getPid(), this.knownPidsDao.findById(r1.getPid()).get().getPid());
+        assertEquals(r1.pid(), this.knownPidsDao.findById(r1.pid()).get().getPid());
         assertEquals(1, this.knownPidsDao.count());
 
         PIDRecord r2 = ApiMockUtils.registerSomeRecord(this.mockMvc);
         assertEquals(2, this.knownPidsDao.count());
-        assertNotEquals(r1.getPid(), r2.getPid());
+        assertNotEquals(r1.pid(), r2.pid());
         
         List<KnownPid> pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.empty());
         
         assertEquals(2, pidinfos.size());
         KnownPid r1Info = pidinfos.get(0);
         KnownPid r2Info = pidinfos.get(1);
-        assertEquals(r1.getPid(), r1Info.getPid());
-        assertEquals(r2.getPid(), r2Info.getPid());
+        assertEquals(r1.pid(), r1Info.getPid());
+        assertEquals(r2.pid(), r2Info.getPid());
 
         // we now limit the interval to the first one, so the second should not be included
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, r1Info.getCreated().plus(3, ChronoUnit.MILLIS), null, null, Optional.empty());
         
         assertEquals(1, pidinfos.size());
-        assertEquals(r1.getPid(), pidinfos.get(0).getPid());
+        assertEquals(r1.pid(), pidinfos.get(0).getPid());
 
         // now the creation interval will include both, but the modified interval only the second.
         ApiMockUtils.registerSomeRecord(this.mockMvc);  // add some record to see if the interval does not enclose it, because it is modified too late.
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, TOMORROW, r1Info.getModified().plus(2, ChronoUnit.MILLIS), r2Info.getModified().plus(3, ChronoUnit.MILLIS), Optional.empty());
         
         assertEquals(1, pidinfos.size());
-        assertEquals(r2.getPid(), pidinfos.get(0).getPid());
+        assertEquals(r2.pid(), pidinfos.get(0).getPid());
     }
 
     /**
@@ -403,19 +417,19 @@ class RestWithInMemoryTest {
         PIDRecord r = ApiMockUtils.registerSomeRecord(this.mockMvc);
         PIDRecord r2 = ApiMockUtils.registerSomeRecord(this.mockMvc);
         assertEquals(2, this.knownPidsDao.count());
-        assertNotEquals(r.getPid(), r2.getPid());
+        assertNotEquals(r.pid(), r2.pid());
         List<KnownPid> pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.empty());
         assertEquals(2, pidinfos.size());
 
         Pageable pageable = Pageable.ofSize(1).first();
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.of(pageable));
         assertEquals(1, pidinfos.size());
-        assertEquals(r.getPid(), pidinfos.get(0).getPid());
+        assertEquals(r.pid(), pidinfos.get(0).getPid());
 
         pageable = pageable.next();
         pidinfos = ApiMockUtils.queryKnownPIDs(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.of(pageable));
         assertEquals(1, pidinfos.size());
-        assertEquals(r2.getPid(), pidinfos.get(0).getPid());
+        assertEquals(r2.pid(), pidinfos.get(0).getPid());
     }
 
     @Test
@@ -423,7 +437,7 @@ class RestWithInMemoryTest {
         PIDRecord r = ApiMockUtils.registerSomeRecord(this.mockMvc);
         PIDRecord r2 = ApiMockUtils.registerSomeRecord(this.mockMvc);
         assertEquals(2, this.knownPidsDao.count());
-        assertNotEquals(r.getPid(), r2.getPid());
+        assertNotEquals(r.pid(), r2.pid());
         JsonNode pidinfos = ApiMockUtils.queryKnownPIDsInTabulatorFormat(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.empty());
         System.out.println(pidinfos);
         assertEquals(2, pidinfos.get("data").size());
@@ -432,7 +446,7 @@ class RestWithInMemoryTest {
         pidinfos = ApiMockUtils.queryKnownPIDsInTabulatorFormat(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.of(pageable));
         assertEquals(1, pidinfos.get("data").size());
         assertEquals(
-            r.getPid(),
+            r.pid(),
             pidinfos
                 .get("data")
                 .get(0)
@@ -445,7 +459,7 @@ class RestWithInMemoryTest {
         pidinfos = ApiMockUtils.queryKnownPIDsInTabulatorFormat(this.mockMvc, YESTERDAY, TOMORROW, null, null, Optional.of(pageable));
         assertEquals(1, pidinfos.get("data").size());
         assertEquals(
-            r2.getPid(),
+            r2.pid(),
             pidinfos
                 .get("data")
                 .get(0)
